--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,11 @@
 html,
 body {
+
+    
+
     font-family: 'Raleway', serif;
-    background-color:#f2f2f2;
+    /*background-image: url("img/bac.jpg");*/
+    /*background-color:#f2f2f2;*/
     color: #0e2126;
     text-align: center;
     font-weight: 300;
@@ -72,4 +76,36 @@ body {
     position: relative;
     top: 3px;
     left: -3px
+}
+
+.container-fluid {
+    padding-bottom: 10px;
+    padding-top: 10px;
+     color: #FFF;
+     font-weight: 100px;
+     font-size: 30px;
+        font-style: oblique;
+}
+
+. col{
+    padding-top: 100px;
+}
+
+.img { 
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: right ;
+    width: 180px;
+     width: 100%;
+    height: auto;
+     padding: 15px;
+    text-align: center;
+}
+
+.row{
+    color: #FFF;
+     font-weight: 100px;
+     font-size: 30px;
+     font-style: oblique; 
+     padding-top: 80px;
 }
