--- a/css/styles.css
+++ b/css/styles.css
@@ -109,3 +109,66 @@ body {
      font-style: oblique; 
      padding-top: 80px;
 }
+
+.btn {
+ 
+    display: inline-block;
+    /*outline: none;*/
+    cursor: pointer;
+    text-align: center;
+    /*text-decoration: none;*/
+    /*font: 14px/100% Arial, Helvetica, sans-serif;*/
+    padding: .5em 2em .55em;
+    text-shadow: 0 1px 1px #FFFFFF;
+    -webkit-border-radius: .5em; 
+    -moz-border-radius: .5em;
+    border-radius: .5em;
+    -webkit-box-shadow: 0 1px 2px #FFFFFF;
+    -moz-box-shadow: 0 1px 2px #FFFFFF;
+    box-shadow: 0 1px 2px #FFFFFF;
+      position: relative;
+    top: 200px;
+    background: #2196F3;
+    font: bold 27px/12px Helvetica, Sans-Serif; text-align: center; color: #FFF;
+}
+
+
+.button:active {
+    position: relative;
+    top: 1px;
+}
+
+
+
+
+
+
+
+
+    /*padding-top: 130px;
+
+    display: block; width: 250px; height: 60px; padding: 40px 0 0 0; margin: 0 auto;
+    
+    background: #398525; /* old browsers */
+   /* background: -moz-linear-gradient(top, #8DD297 0%, #398525 100%); /* firefox */
+   /* background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#8DD297), color-stop(100%,#398525)); /* webkit */
+    
+   /* box-shadow: inset 0px 0px 6px #fff;
+    -webkit-box-shadow: inset 0px 0px 6px #fff;
+    border: 1px solid #5ea617;
+    border-radius: 10px;
+    
+    font: bold 55px/25px Helvetica, Sans-Serif; text-align: center;
+    text-transform: lowercase; text-decoration: none;
+    color: #147032;
+    text-shadow: 0px 1px 2px #b4d1ad;
+    
+    -moz-transition: color 0.25s ease-in-out;
+    -webkit-transition: color 0.25s ease-in-out;
+    transition: color 0.25s ease-in-out;
+    color: #145675;
+        
+        -moz-transition: color 0.25s ease-in-out;
+        -webkit-transition: color 0.25s ease-in-out;
+        transition: color 0.25s ease-in-out;
+        }
