--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,7 @@ body {
 
     font-family: 'Raleway', serif;
     /*background-image: url("img/bac.jpg");*/
-    /*background-color:#f2f2f2;*/
+    background:#336699;
     color: #0e2126;
     text-align: center;
     font-weight: 300;
