--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,8 @@ html,
 body {
 
     font-family: 'Raleway', serif;
-    /*background-image: url("img/bac.jpg");*/
-    background:#336699;
+    /*background-image: url("img/bac.jpg");
+    background:#336699;*/
     color: #0e2126;
     text-align: center;
     font-weight: 300;
@@ -18,7 +18,8 @@ body {
      color: #FFF;
      font-weight: 100px;
      font-size: 30px;
-        font-style: oblique;
+    font-style: oblique;
+    vertical-align: text-top;
 }
 
 . col{
