--- a/css/styles.css
+++ b/css/styles.css
@@ -2,8 +2,8 @@ html,
 body {
 
     font-family: 'Raleway', serif;
-    /*background-image: url("img/bac.jpg");
-    background:#336699;*/
+    /*background-image: url("img/bac.jpg");*/
+    background:#336699;
     color: #0e2126;
     text-align: center;
     font-weight: 300;
@@ -20,6 +20,7 @@ body {
      font-size: 30px;
     font-style: oblique;
     vertical-align: text-top;
+    width: 100%;
 }
 
 . col{
@@ -62,7 +63,8 @@ body {
     -moz-box-shadow: 0 1px 2px #FFFFFF;
     box-shadow: 0 1px 2px #FFFFFF;
       position: relative;
-    top: 200px;
+    top: 50px;
+    bottom: 100px;
     background: #2196F3;
     font: bold 27px/12px Helvetica, Sans-Serif; text-align: center; color: #FFF;
 }
@@ -126,3 +128,16 @@ p{
 .masthead {
     background-color: #000000;
 }
+
+/*index.css*/
+
+#bg{
+    padding-left: 600px;
+    position: relative;
+    width: 70px;
+    height: 70px;
+ }
+
+ .navbar-brand {
+    padding-left: 30px;
+ }
